# S-P-500-Stock-Data

./: README.md
cpp/: CMakeLists.txt
cpp/include/: NeuralNetwork.hpp
cpp/src/: NeuralNetwork.cpp  NeuralNetwork_copy.cpp  main.cpp  nn_cpp
py/: eda.ipynb
